<resources>
    <string name="app_name">步花间</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_with_third">用社交账号登录</string>
    <string name="login_with_count">已有账号？点我登入</string>
    <string name="or">或</string>
    <string name="register_with_phone">手机号注册</string>
    <string name="register_with_phone_input">手机号注册</string>
    <string name="hint">180</string>
    <string name="register_with_phone_next">下一步</string>
    <string name="set_user_info_hint">名号</string>
    <string name="set_user_info_hint_pwd">密码</string>
    <string name="set_user_info_hint_conf_pwd">确认密码</string>
    <string name="set_user_info_protocol">同意《用户协议》</string>
    <string name="set_user_info_join">加入飞花令</string>
    <string name="wrong_format_phone">您的手机号格式有误~</string>
    <string name="input_phone">请填写电话号码~</string>
    <string name="input_user_name">请填写名号~</string>
    <string name="input_pwd">请填写密码~</string>
    <string name="input_conf_pwd">请填写确认密码~</string>
    <string name="pwd_not_equal">两次输入的密码不一致~</string>
    <string name="agree_user_protocol">请同意用户协议~</string>
    <string name="register_success">注册成功!</string>
    <string name="no_such_user">没有该用户!</string>
    <string name="no_use_phone">无效手机号!</string>
    <string name="phone_has_exist">手机号已经被注册!</string>
    <string name="user_name">步花间</string>
    <string name="user_description">十年磨一剑，霜刃未曾试</string>
    <string name="record">战绩</string>
    <string name="poetry">藏诗</string>
    <string name="friends">好友</string>
    <string name="loading">努力加载中...</string>
    <string name="search">Search</string>
    <string name="input_friends_name">请输入待查找用户名!</string>
    <string name="request_has_sended">请求已发送!</string>
    <string name="user_id">ID: 0386</string>
    <string name="add_friend">加为好友</string>
    <string name="send_successfully">发送请求成功,请等待对方验证!</string>
    <string name="somthing_error">出错啦!</string>
    <string name="new_add_friend">加好友</string>
    <string name="ask_adjiaweid_friend">请求加为好友!</string>
    <string name="ask_add_friend">请求加为好友!</string>
</resources>
