<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/register_with_phone"
        android:textColor="#758a99"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/register_with_phone_return_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="40dp"
        android:background="@mipmap/return_back" />

    <ImageView
        android:id="@+id/register_with_phone_help_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:layout_marginTop="40dp"
        android:background="@mipmap/help" />

    <ImageView
        android:layout_width="245dp"
        android:layout_height="62.5dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="128dp"
        android:background="@mipmap/regis_ill" />

    <TextView
        android:id="@+id/set_user_info_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="258dp"
        android:text="@string/hint"
        android:textColorHint="#758a99"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/set_user_info_name"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="293dp"
        android:background="@null"
        android:drawableBottom="@mipmap/line_200"
        android:gravity="top|center_horizontal"
        android:hint="@string/set_user_info_hint"
        android:lines="1"
        android:textColorHint="#758a99"
        android:textCursorDrawable="@mipmap/lightbar1"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/set_user_info_pwd"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_info_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@null"
        android:drawableBottom="@mipmap/line_200"
        android:gravity="top|center_horizontal"
        android:hint="@string/set_user_info_hint_pwd"
        android:inputType="textPassword"
        android:lines="1"
        android:textColorHint="#758a99"
        android:textCursorDrawable="@mipmap/lightbar1"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/set_user_info_conf_pwd"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_info_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@null"
        android:drawableBottom="@mipmap/line_200"
        android:gravity="top|center_horizontal"
        android:hint="@string/set_user_info_hint_conf_pwd"
        android:inputType="textPassword"
        android:lines="1"
        android:textColorHint="#758a99"
        android:textCursorDrawable="@mipmap/lightbar1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/set_user_info_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_info_conf_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/set_user_info_protocol"
        android:textColor="#758a99"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/set_user_info_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_info_conf_pwd"
        android:layout_marginRight="8dp"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/set_user_info_protocol"
        android:button="@drawable/bt_choice_selector"
        android:scaleX="0.8"
        android:scaleY="0.8" />

    <TextView
        android:id="@+id/set_user_info_join"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="495dp"
        android:background="@mipmap/button_red"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/set_user_info_join"
        android:textColor="#f3f9f1"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/set_user_info_join"
        android:layout_alignTop="@+id/set_user_info_join"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="15dp"
        android:background="@mipmap/flower_b" />

</RelativeLayout>
