<?xml version="1.0" encoding="utf-8"?>
<com.example.yuanping.feihuaapp.view.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliding_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:layout_width="215dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/main_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp">

            <ImageView
                android:id="@+id/main_setting_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="40dp"
                android:background="@mipmap/setting" />

            <ImageView
                android:id="@+id/head_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:background="@mipmap/head_edge" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:background="@drawable/user_image_temp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/head_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:text="@string/user_name"
                android:textColorHint="@color/color_text_two"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/temp_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@mipmap/flower_p2" />

            <TextView
                android:id="@+id/user_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/temp_three"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8.5dp"
                android:text="@string/user_description"
                android:textColor="@color/color_text_one"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/record_menu"
                android:layout_width="215dp"
                android:layout_height="40dp"
                android:layout_marginTop="295dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:background="@mipmap/history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="120dp"
                    android:text="@string/record"
                    android:textColor="@color/color_text_two"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/red_oval_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="160dp"
                    android:background="@mipmap/arc"
                    android:visibility="invisible" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/poetry_menu"
                android:layout_width="215dp"
                android:layout_height="40dp"
                android:layout_below="@+id/record_menu"
                android:layout_marginTop="2dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:background="@mipmap/poembook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="120dp"
                    android:text="@string/poetry"
                    android:textColor="@color/color_text_two"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/red_oval_poetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="160dp"
                    android:background="@mipmap/arc"
                    android:visibility="invisible" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/friends_menu"
                android:layout_width="215dp"
                android:layout_height="40dp"
                android:layout_below="@+id/poetry_menu"
                android:layout_marginTop="2dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:background="@mipmap/friends" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="120dp"
                    android:text="@string/friends"
                    android:textColor="@color/color_text_two"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/red_oval_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="160dp"
                    android:background="@mipmap/arc"
                    android:visibility="invisible" />
            </RelativeLayout>


            <ImageView
                android:layout_width="192dp"
                android:layout_height="100.5dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="468dp"
                android:background="@mipmap/user_ill" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/main_below"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/main_main_layout" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/main_below">

                <ImageView
                    android:id="@+id/user_mask"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/user_mask"
                    android:visibility="visible" />
            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>

</com.example.yuanping.feihuaapp.view.SlidingMenu>

